pod-security-114/baseline/disallow-host-path/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-host-path
spec:
  validationActions: [Deny]
status:
  conditionStatus:
    ready: true
